chore: disable animation using config file to enable env vars to be changed after the image has been built

--- a/portal-ui/public/index.html
+++ b/portal-ui/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="%PUBLIC_URL%/config.js"></script>
     <meta charset="utf-8" />
     <base href="/" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
